agile outgoing price and agilepredict name changes,

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
                     <a href="https://xgboost.readthedocs.io/en/stable/#">XGBoost</a> Gradient Boosting library,
                     <a href="https://pandas.pydata.org/">pandas</a> and
                     <a href="https://www.djangoproject.com/">django</a>. The model is trained on a combination of
-                    historic actual data and historic forecasts together with the actual Agile prices. As more forecasts
+                    historic actual data and historic forecasts together with the actual Outgoing Agile prices. As more forecasts
                     are processed the model should <i>learn</i> and improve its predictions.
                 </p>
 
