--- a/templates/api_how_to.html
+++ b/templates/api_how_to.html
@@ -45,7 +45,7 @@
 - platform: rest
     resource: https://prices.fly.dev/api/G
     scan_interval: 3600
-    name: Agile Predict
+    name: Agile Outgoing Predict
     value_template: {% verbatim %} "{{ value_json[0]['name']}}" {% endverbatim %}
     json_attributes_path: "$[0]"
     json_attributes:
