--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg p-4">
             <div class="card bg-dark-subtle p-3">
-                <h4>About AgilePredict</h4>
+                <h4>About AgileOutgoingPredict</h4>
                 <p>
                     This model attempts to forecasts Octopus Agile electricity prices up to 14 days in advance using a
                     Machine Learning model trained on data from the Balancing Mechanism Reporting System (<a
