--- a/templates/home_assistant.html
+++ b/templates/home_assistant.html
@@ -20,7 +20,7 @@
                     <pre class="chroma">
                         sensor:
                         - platform: rest
-                            <span "highlight-color">resource: </span>https://prices.fly.dev/api/G
+                            <span "highlight-color">resource: </span>https://outgoing.shed.gay/api/G
                             scan_interval: 3600
                             name: Agile Outgoing Predict
                             value_template: {% verbatim %} "{{ value_json[0]['name']}}"{% endverbatim %} 
