--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <div class="container-lg">
                 <nav class="navbar navbar-expand-lg bg-primary-subtle">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">AgilePredict</a>
+                        <a class="navbar-brand" href="#">AgileOutgoingPredict</a>
                         <button
                             class="navbar-toggler"
                             type="button"
